Add email capture section before footer
Added an email capture section with a form for users to sign up for free business tools.

--- a/index.html
+++ b/index.html
@@ -210,6 +210,20 @@
        📧 Email to Team
     </a>
 </div>
+
+    <!-- Email Capture - Add this before your footer -->
+<div style="background: linear-gradient(135deg, #667eea, #764ba2); color: white; padding: 25px; margin: 25px 0; border-radius: 10px; text-align: center;">
+    <h4 style="margin-bottom: 10px;">🚀 Get More Free Business Tools</h4>
+    <p style="margin-bottom: 15px; opacity: 0.9;">Join for productivity tools and business insights (no spam!)</p>
+    <form style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
+        <input type="email" placeholder="Your email address" required 
+               style="padding: 12px; border: none; border-radius: 5px; min-width: 250px;">
+        <button type="submit" 
+                style="padding: 12px 25px; background: #fff; color: #667eea; border: none; border-radius: 5px; font-weight: bold;">
+                Get Free Tools
+        </button>
+    </form>
+</div>
         
         <div class="footer">
             <p>Use this tool to make your meetings more productive and cost-effective!</p>
