--- a/index.html
+++ b/index.html
@@ -211,18 +211,22 @@
     </a>
 </div>
 
-    <!-- Email Capture - Add this before your footer -->
-<div style="background: linear-gradient(135deg, #667eea, #764ba2); color: white; padding: 25px; margin: 25px 0; border-radius: 10px; text-align: center;">
+    <div style="background: linear-gradient(135deg, #667eea, #764ba2); color: white; padding: 25px; margin: 25px 0; border-radius: 10px; text-align: center;">
     <h4 style="margin-bottom: 10px;">🚀 Get More Free Business Tools</h4>
     <p style="margin-bottom: 15px; opacity: 0.9;">Join for productivity tools and business insights (no spam!)</p>
-    <form style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
-        <input type="email" placeholder="Your email address" required 
+    
+    <!-- REPLACE THE ACTION URL WITH YOUR FORMSPREE URL -->
+    <form action= "https://formspree.io/f/mqawnrpz" method="POST" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
+        <input type="email" name="email" placeholder="Your email address" required 
                style="padding: 12px; border: none; border-radius: 5px; min-width: 250px;">
+        <input type="hidden" name="_subject" value="New subscriber from Meeting Cost Calculator!">
+        <input type="hidden" name="_replyto" value="%email%">
         <button type="submit" 
                 style="padding: 12px 25px; background: #fff; color: #667eea; border: none; border-radius: 5px; font-weight: bold;">
                 Get Free Tools
         </button>
     </form>
+    <p style="font-size: 12px; margin-top: 10px; opacity: 0.8;">We respect your privacy. Unsubscribe anytime.</p>
 </div>
         
         <div class="footer">
