Update contact email address

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Contact Us</h1>
     <p>Have questions or suggestions? Reach out!</p>
-    <p>Email: your-email@gmail.com</p>
+    <p>Email: moonamu@yahoo.com </p>
     <p>We're building more free business tools - stay tuned!</p>
     <a href="index.html">← Back to Calculator</a>
 </body>
