Update contact email in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
         <li>Uses Google Analytics for traffic data</li>
         <li>No cookies are set by our calculator</li>
     </ul>
-    <p>Contact: [Your email]</p>
+    <p>Contact: moonamu@ yahoo.com </p>
     <a href="index.html">← Back to Calculator</a>
 </body>
 </html>
